# Ackermann_Model

./: CMakeLists.txt  README.md  contributors.txt  package.xml
cfg/: landing.cfg
include/: CartDemoPlugin.hh  deprecated_ackermann_plugin.h  motion_controller_class.h
launch/: carlikemodel.launch  f150.launch
models/Ackermann/: model.config  model.rsdf  model.sdf  oldmodel.sdf
models/F150/: car_like.urdf.xarco  model.config  model.sdf
models/F150/meshes/: F150.dae  wheel.dae
models/f150_ackermann/: model.config  model.rsdf  model.sdf
models/f150_ackermann/meshes/: F150.dae
msg/: DriveCmd.msg  DriveCmd.msg~
src/: CartDemoPlugin.cc  Deprecated_ackermann_plugin.cpp  f150_follower.cc  motion_controller_class.cpp
