<?xml version="1.0"?>
<package>
  <name>gazebo_f150</name>
  <version>0.0.0</version>
  <description>The gazebo_f150 package</description>


  <maintainer email="borowczyk.alexandre@gmail.com">Alexandre Borowczyk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gazebo_f150</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_plugins</build_depend>
  <build_depend>rotors_gazebo_plugins</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>rotors_gazebo_plugins</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />

  </export>
</package>
